[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/hasa1002.input_macros/recorder.gd" type="Script" id=1]

[node name="Recorder" type="WindowDialog"]
margin_right = 755.0
margin_bottom = 47.0
window_title = "Input Recorder"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartStop" type="Button" parent="Controls"]
margin_right = 108.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Start Recording"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Button" parent="Controls"]
margin_left = 112.0
margin_right = 162.0
margin_bottom = 40.0
size_flags_horizontal = 3
disabled = true
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseButton" type="CheckButton" parent="Controls"]
margin_left = 166.0
margin_right = 374.0
margin_bottom = 40.0
size_flags_horizontal = 3
pressed = true
text = "Mouse Button Input"

[node name="KeyboardInput" type="CheckButton" parent="Controls"]
margin_left = 378.0
margin_right = 555.0
margin_bottom = 40.0
size_flags_horizontal = 3
pressed = true
text = "Keyboard Input"

[node name="MouseMove" type="CheckButton" parent="Controls"]
margin_left = 559.0
margin_right = 759.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Mouse Move Input"

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 129.367
margin_top = 150.694
margin_right = 619.367
margin_bottom = 411.694
popup_exclusive = true
window_title = "Select Record File"
resizable = true
mode_overrides_title = false
access = 1
filters = PoolStringArray( "*.irec ; Input Recording" )
current_dir = "user://screenshot_macros"
current_file = "main.irec"
current_path = "user://screenshot_macros/main.irec"

[connection signal="popup_hide" from="." to="." method="_on_popup_hide"]
[connection signal="pressed" from="Controls/StartStop" to="." method="_on_StartStop_pressed"]
[connection signal="pressed" from="Controls/Pause" to="." method="_on_Pause_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
